@@ -3,7 +3,6 @@ import static java.lang.Thread.sleep;
 
 import java.util.Observable;
 import java.util.Observer;
-import java.util.Random;
 
 /**
  * Test Sim for steering
@@ -12,27 +11,29 @@ import java.util.Random;
  */
 public class SteeringSim implements Observer { /* Lateral Field of View of the Camera */
 
-  int carFov = 49; /* Course of the following car */
-  double course; /* Course of the leading car */
-  double frontCourse; /* Error in camera units */
-  double error; /* Error in degrees */
-  double degError; /* Amplification */
-  double k; /* Number of invocations */
-  int s; /* SteeringSim */
-  double steer; /* *Starts the thread running the leading car */
+  private final int carFov = 49; /* Course of the following car */
+  private double course; /* Course of the leading car */
+  private double frontCourse; /* Error in camera units */
+  private double error; /* Error in degrees */
+  private double degError; /* Amplification */
+  private final double k; /* Number of invocations */
+  private int s; /* SteeringSim */
+  private double steer; /* *Starts the thread running the leading car */
 
   public SteeringSim() {
     s = 0;
     course = 0;
     k = 1.1;
-    FrontCar fc = new FrontCar(this);
-    new Thread(fc).start();
   } /* * On update, receives the course on which the leading car is traveling, calculates the error and sets the steering * accordingly. */
+
+  public void startThread(FrontCar fc) {
+    new Thread(fc).start();
+  }
 
   @Override
   public void update(Observable o, Object arg) {
     s++;
-    frontCourse = new Double(arg.toString());
+    frontCourse = Double.valueOf(arg.toString());
     degError = frontCourse - course;
     error = degError / carFov;
     if (s % 5 == 0) {
@@ -49,16 +50,16 @@ public class SteeringSim implements Observer { /* Lateral Field of View of the C
     }
   }
 
-  public class FrontCar extends Observable implements Runnable {
+  static class FrontCar extends Observable implements Runnable {
 
     double course;
-    Random r;
+    //Random r;
     int s;
 
     public FrontCar(SteeringSim st) {
       this.addObserver(st);
       course = 0;
-      r = new Random();
+      //r = new Random();
       s = 0;
     }
 
